[gd_scene load_steps=2 format=3 uid="uid://d2ql0x1j0kd4s"]

[ext_resource type="Script" path="res://Scripts/DiffucultySetting.gd" id="1_7jn43"]

[node name="DiffucultySetting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7jn43")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose your Difficultiy"

[node name="Hard" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="Normal" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Normal"

[node name="Easy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Easy"

[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_easy_pressed"]
